CSS fix for sidebar bleeding into blog post on smaller screen sizes.

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -148,10 +148,6 @@ a, a:visited {
 color: inherit;
 }
 
-#sidebar {
-    position: fixed;
-}
-
 .thesudorm {
     color: #1ed8d2;
 }
